# libsdptransform

./: CMakeLists.txt  vcpkg.json
cmake/: config.cmake.in
include/: sdptransform.hpp
readme-helper/: readme.cpp
src/: grammar.cpp  parser.cpp  writer.cpp
